# notesnet

./: .git-blame-ignore-revs  .gitattributes  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  Dockerfile  assets-compressor.mts  codegen.ts  drizzle.config.ts  generate_migrate.py  index.html  openapi.json  orval.config.ts  package.json  pnpm-lock.yaml  schema.graphql  schema.sql  tsconfig.json  vite.config.ts
.sqlx/: query-12fb02b3e175da8afe8223772d56bbbe4f29fc6980efd33abbddccb2e644d77a.json  query-1c555c732f7c5300b4adefeb9011b5289ff558d7b10c935a0f5a2a11bdc3ff32.json  query-24cdc9d0d24d96743184084dcead73ab0e90f2e3d331bf0ccd81569535ddf335.json  query-4a2ab1c96f43deb813dc114b7ca73b53e83b490e6db834e19e9854cdcf8ed929.json  query-5078bbfab4573781517b401cec3d323fd697bec2109657c293bb685d3ca04628.json  query-51d6df1d5a023f3d92471fddccb9e2e1857c5ff522e06882663cbabacdf5ffff.json  query-55183d5a3a52f4205f3d6d63855d13fe7644b055eb598d06d5946af492824708.json  query-5911fcb88f0c28849520bfcb8454a83515fe853a30059ec70ca74dc25b6626e3.json  query-67cbfef4cd90916f3456170e4797270aa4e5c5c6283d67ed19f327dfbadaef1e.json  query-67da383f92854c5e99d8d6301f048891b5df4d741aca89bb5491f0fda0253141.json  query-68e7a3107f81009a8bce862c8017f820663e62185d7fa202dac2dd957fb6bdb9.json  query-6c20b22d595a8e316c4312df90638d64f65dbfe25a2aba0b2d456ada23d9f128.json  query-7cfbae5be4382b7bac1ff34975773027acac794a5f383cbbd4df1b4f62147eb9.json  query-7eeec41367c79f81e5aa2d295860c31fa7eb87cea503b247480691b71c7e32e4.json  query-82609594a924dd1f2e83d057e35a3e181d75c0957c1a93eba7a988c4f966e99e.json  query-831052345dda6910612ea2331ba21c4b6c1a4fdc415e8a75c2a94cea60e6a501.json  query-8b911e79be3dd774bd024b40f1f28dd6aaec85ce5bf8e8a521f327e026ec986a.json  query-9099520e60938e176bddaec4a7d3eb240b704b143827bc1408d2f92a25a60094.json  query-9c260b0db5c6e57e75ec818b11c36f92f61b9100b4f90952a64e26fd76fbbcdf.json  query-a4641bb22c3ab07c3dc4123c90538a61afb3f76eaeb297e538f1f9c2e084a957.json  (+5 more)
(+154 files in other folders)
