[package]
name = "notesnet"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
hex = "0.4.3"
serde = "1.0.228"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1.23.1", features = ["v4"] }
