[package]
name = "notesnet"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["chrono", "migrate", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
